--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,8 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.pnp.loader.mjs
 
 # testing
 /coverage
@@ -16,8 +12,6 @@
 # next.js
 /.next/
 /out/
-
-# production
 /build
 
 # misc
@@ -28,7 +22,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+
+# local env files
+.env
+.env*.local
 
 # vercel
 .vercel
@@ -37,9 +35,14 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-.genkit/*
-.env*
+# studio
+/patches
+patch-package.json
+apphosting.yaml
+firebase.json
+firebase.rc
 
-# firebase
-firebase-debug.log
-firestore-debug.log
+# genkit
+.genkit/
+.genkit-cache/
+genkit.log
